# cross

./: .gitignore  CMakeLists.txt  README.md  cross.c  cross.h  main.c
toolchains/: mingw.cmake  osxcross.cmake
